--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,45 +8,44 @@
   <link rel="stylesheet" href="css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
-   
+
   </style>
 </head>
+
 <body>
-
-  <!-- Header Section -->
   <header class="main-header">
-    <div class="container">
-      <!-- Logo on the left -->
-      <img src="img/logo.jpg" alt="School Logo" class="logo-img" />
-
-      <!-- Branding and Navigation -->
-      <div style="display: flex; flex-direction: column; width: 100%;">
-        <!-- School Name -->
-        <div class="branding">
-          <div class="school-name">
-            <span class="gold">I.R.</span>
-            <span class="white">LESOLANG</span>
-            <span class="blue">SECONDARY SCHOOL</span>
-          </div>
+    <div class="header-container">
+      <img src="img/logo.jpg" alt=" Logo" class="logo-img">
+      <div class="header-divider"></div>
+      <div class="branding">
+        <div class="school-name">
+          <span>I.R</span>
+          <span>LESOLANG</span>
+          <span>SECONDARY</span>
+          <span>SCHOOL</span>
         </div>
-
-        <!-- Navigation -->
-        <nav class="nav">
-          <ul>
-            <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#academics">Academics</a></li>
-            <li><a href="#admissions">Admissions</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
+        <div class="school-motto">Labor omnia vincet</div>
       </div>
-
-      <!-- Mobile Hamburger Menu -->
-      <button class="nav-toggle" aria-label="toggle navigation">
-        <span class="hamburger"></span>
-      </button>
     </div>
+  
+  <!-- Navigation -->
+  <nav class="nav">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#admissions">Admissions</a></li>
+      <li><a href="#academics">Academics</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  </div>
+
+  <!-- Mobile Hamburger Menu -->
+  <button class="nav-toggle" aria-label="toggle navigation">
+    <span class="hamburger"></span>
+  </button>
+  </div>
   </header>
 
   <!-- Hero Section -->
@@ -71,4 +71,5 @@
   </script>
 
 </body>
+
 </html>
