--- a/index.html
+++ b/index.html
@@ -27,36 +27,87 @@
         <div class="school-motto">Labor omnia vincet</div>
       </div>
     </div>
-  
-  <!-- Navigation -->
-  <nav class="nav">
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#admissions">Admissions</a></li>
-      <li><a href="#academics">Academics</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  </div>
 
-  <!-- Mobile Hamburger Menu -->
-  <button class="nav-toggle" aria-label="toggle navigation">
-    <span class="hamburger"></span>
-  </button>
-  </div>
+    <!-- Navigation -->
+    <nav class="nav">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#admissions">Admissions</a></li>
+        <li><a href="#academics">Academics</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    </div>
+
+    <!-- Mobile Hamburger Menu -->
+    <button class="nav-toggle" aria-label="toggle navigation">
+      <span class="hamburger"></span>
+    </button>
+    </div>
   </header>
 
-  <!-- Hero Section -->
-  <section id="home" class="hero">
+  <section id="hero" class="hero">
     <div class="container">
       <h1>Welcome to I.R. Lesolang Secondary School</h1>
-      <p>Empowering students for a brighter future with excellence in education and values.</p>
-      <a href="#admissions" class="btn btn-primary">Apply Now</a>
+      <p>Empowering learners through knowledge, discipline, and integrity.</p>
+      <a href="#about" class="btn">Learn More</a>
     </div>
   </section>
 
+  <section id="about" class="about">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>I.R. Lesolang Secondary School is committed to academic excellence and the holistic development of all
+        learners. Located in [Location], we aim to provide a supportive and stimulating environment that encourages
+        students to achieve their best.</p>
+    </div>
+  </section>
+  <section id="news" class="news">
+    <div class="container">
+      <h2>Latest News & Events</h2>
+      <ul>
+        <li><strong>June 2025:</strong> Midyear exams begin.</li>
+        <li><strong>July 2025:</strong> Winter school programs launch.</li>
+        <li><strong>August 2025:</strong> Parent-teacher meetings scheduled.</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="departments" class="departments">
+    <div class="container">
+      <h2>Departments</h2>
+      <div class="grid">
+        <div class="card">Science Department</div>
+        <div class="card">Commerce Department</div>
+        <div class="card">Languages & Arts</div>
+        <div class="card">Technology & Computer Studies</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p><strong>Address:</strong> [Insert Physical Address]</p>
+      <p><strong>Email:</strong> info@irlesolangschool.co.za</p>
+      <p><strong>Phone:</strong> +27 (XX) XXX XXXX</p>
+      <form>
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Your Email" required />
+        <textarea placeholder="Your Message" rows="5"></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+  
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 I.R. Lesolang Secondary School. All rights reserved.</p>
+    </div>
+  </footer>
+  
   <!-- Other sections here (About, Academics, Admissions, Contact) -->
 
   <script>
