new interface of the homepage

--- a/index.html
+++ b/index.html
@@ -41,77 +41,177 @@
     </nav>
     </div>
 
-    <!-- Mobile Hamburger Menu -->
+     <!-- Mobile Hamburger Menu -->
     <button class="nav-toggle" aria-label="toggle navigation">
       <span class="hamburger"></span>
     </button>
     </div>
   </header>
 
-  <section id="hero" class="hero">
+  <!-- Hero Section -->
+  <section class="hero">
     <div class="container">
-      <h1>Welcome to I.R. Lesolang Secondary School</h1>
-      <p>Empowering learners through knowledge, discipline, and integrity.</p>
+      <h1>Welcome to I.R Lesolang Secondary School</h1>
+      <p>Providing quality education for grades 8-12 in a nurturing environment that fosters academic excellence,
+        personal growth, and community engagement.<br>
+        I. R. Lesolang Secondary School is a Public Secondary in Winterveldt Pretoria in Gauteng, South Africa.</p>
       <a href="#about" class="btn">Learn More</a>
     </div>
   </section>
 
-  <section id="about" class="about">
+  <!-- Features Section -->
+  <section class="features" id="about">
     <div class="container">
-      <h2>About Us</h2>
-      <p>I.R. Lesolang Secondary School is committed to academic excellence and the holistic development of all
-        learners. Located in [Location], we aim to provide a supportive and stimulating environment that encourages
-        students to achieve their best.</p>
-    </div>
-  </section>
-  <section id="news" class="news">
-    <div class="container">
-      <h2>Latest News & Events</h2>
-      <ul>
-        <li><strong>June 2025:</strong> Midyear exams begin.</li>
-        <li><strong>July 2025:</strong> Winter school programs launch.</li>
-        <li><strong>August 2025:</strong> Parent-teacher meetings scheduled.</li>
-      </ul>
-    </div>
-  </section>
+      <h2 class="section-title">Why Choose I.R Lesolang?</h2>
+      <div class="features-grid">
+        <div class="feature-card">
+          <div class="feature-icon">
+            <i class="fas fa-graduation-cap"></i>
+          </div>
 
-  <section id="departments" class="departments">
-    <div class="container">
-      <h2>Departments</h2>
-      <div class="grid">
-        <div class="card">Science Department</div>
-        <div class="card">Commerce Department</div>
-        <div class="card">Languages & Arts</div>
-        <div class="card">Technology & Computer Studies</div>
+          <h3>Academic Excellence</h3>
+          <p>Our school consistently achieves outstanding matric results, with a focus in all streams subjects and critical
+            thinking skills.</p>
+        </div>
+
+        <div class="feature-card">
+          <div class="feature-icon">
+            <i class="fas fa-users"></i>
+          </div>
+
+          <h3>Experienced Educators</h3>
+          <p>Our dedicated teaching staff are highly qualified and committed to student success both academically and
+            personally.</p>
+        </div>
+
+        <div class="feature-card">
+          <div class="feature-icon">
+            <i class="fas fa-futbol"></i>
+          </div>
+
+          <h3>Sports & Activities</h3>
+          <p>We offer a wide range of sport sand extracurricular activities to develop well-rounded individuals.</p>
+        </div>
+
+
       </div>
     </div>
   </section>
 
-  <section id="contact" class="contact">
+  <!-- Announcements Section -->
+  <section class="announcements">
     <div class="container">
-      <h2>Contact Us</h2>
-      <p><strong>Address:</strong> [Insert Physical Address]</p>
-      <p><strong>Email:</strong> info@irlesolangschool.co.za</p>
-      <p><strong>Phone:</strong> +27 (XX) XXX XXXX</p>
-      <form>
-        <input type="text" placeholder="Your Name" required />
-        <input type="email" placeholder="Your Email" required />
-        <textarea placeholder="Your Message" rows="5"></textarea>
-        <button type="submit">Send Message</button>
-      </form>
+      <h2 class="section-title">Latest Announcements</h2>
+      <div class="announcement-card">
+        <h3>2024 Matric Results Celebration</h3>
+        <span class="announcement-date">January 20, 2024</span>
+        <p>We're proud to announce an 89% pass rate for our 2023 matric class, with 45 distinctions across various
+          subjects. A celebration assembly will be held on Friday at 10am in the school hall.</p>
+      </div>
+
+      <div class="announcement-card">
+        <h3>School Open Day</h3>
+        <span class="announcement-date">February 5, 2024</span>
+        <p>Prospective students and parents are invited to our annual Open Day on March 15th. Tour our facilities, meet
+          teachers, and learn about our academic programs and extracurricular offerings.</p>
+      </div>
+      
+      <div class="announcement-card">
+        <h3>Sports Day Postponement</h3>
+        <span class="announcement-date">February 12, 2024</span>
+        <p>Due to inclement weather forecasts, our annual Sports Day has been postponed to March 22nd. All other school
+          activities will continue as scheduled.</p>
+      </div>
     </div>
   </section>
-  
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 I.R. Lesolang Secondary School. All rights reserved.</p>
-    </div>
-  </footer>
-  
-  <!-- Other sections here (About, Academics, Admissions, Contact) -->
 
-  <script>
-    // Mobile menu toggle script
+   <!-- Social Media Section -->
+        <section id="social-media" class="social-media-section" aria-label="Social Media Section">
+          <h2>Connect With Us</h2>
+          <p class="heading">See Our Latest Activities</p>
+          <div class="social-media-grid">
+
+            <!-- Facebook Embed -->
+            <div class="social-media-item">
+              <div id="fb-root"></div>
+              <div class="fb-page" data-href="https://web.facebook.com/photo/?fbid=417614777173334&set=a.417614747173337&__tn__=%3C"
+                data-width="400" data-height="400" data-tabs="timeline" data-small-header="false"
+                data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+              </div>
+            </div>
+
+  <!-- Quick Links Section -->
+  <section class="quick-links">
+    <div class="container">
+      <h2 class="section-title">Quick Links</h2>
+      <div class="links-grid">
+        <div class="link-card">
+          <h3><i class="fas fa-user-graduate"></i> Students</h3>
+          <ul>
+            <li><a href="#">Timetables</a></li>
+            <li><a href="#">Exam Schedule</a></li>
+          </ul>
+        </div>
+        <div class="link-card">
+          <h3><i class="fas fa-user-friends"></i> Parents</h3>
+          <ul>
+            <li><a href="#">School Calendar</a></li>
+            <li><a href="#">Fee Information</a></li>
+          </ul>
+        </div>
+        <div class="link-card">
+          <h3><i class="fas fa-book"></i> Academics</h3>
+          <ul>
+            <li><a href="#">Subject Choices</a></li>
+            <li><a href="#">Tutoring Schedule</a></li>
+            <li><a href="#">Library Resources</a></li>
+            <li><a href="#">Career Guidance</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-column">
+          <h3>Contact Us</h3>
+          <address>
+            123 Education Street<br>
+            Johannesburg, 2000<br>
+            South Africa
+          </address>
+          <p><i class="fas fa-phone"></i> +27 11 123 4567</p>
+          <p><i class="fas fa-envelope"></i> info@irlesolanghigh.edu.za</p>
+        </div>
+        <div class="footer-column">
+          <h3>School Hours</h3>
+          <p>Monday - Friday: 7:30am - 3:00pm</p>
+          <p>Office Hours: 7:00am - 4:00pm</p>
+          <p>Closed on weekends and public holidays</p>
+        </div>
+        <div class="footer-column">
+          <h3>Follow Us</h3>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+          </div>
+          <p>Subscribe to our newsletter for updates</p>
+        </div>
+      </div>
+
+
+      <p>&copy; 2024 I.R Lesolang High School. All Rights Reserved. | <a href="#"
+          style="color: var(--secondary-color);">Privacy Policy</a> | <a href="#"
+          style="color: var(--secondary-color);">Terms of Use</a></p>
+
+
+      <script>
+      // Mobile menu toggle script
     const navToggle = document.querySelector('.nav-toggle');
     const nav = document.querySelector('.nav ul');
 
@@ -119,7 +219,7 @@
       nav.classList.toggle('nav-open');
       navToggle.classList.toggle('open');
     });
-  </script>
+      </script>
 
 </body>
 
