complete home-page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>I.R LESOLANG SCHOOL</title>
   <link rel="stylesheet" href="css/styles.css" />
+  <script src="js/script.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
 
@@ -33,7 +35,7 @@
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#admissions">Admissions</a></li>
+        <li><a href="#admissions">Donate</a></li>
         <li><a href="#academics">Academics</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -41,7 +43,7 @@
     </nav>
     </div>
 
-     <!-- Mobile Hamburger Menu -->
+    <!-- Mobile Hamburger Menu -->
     <button class="nav-toggle" aria-label="toggle navigation">
       <span class="hamburger"></span>
     </button>
@@ -70,7 +72,8 @@
           </div>
 
           <h3>Academic Excellence</h3>
-          <p>Our school consistently achieves outstanding matric results, with a focus in all streams subjects and critical
+          <p>Our school consistently achieves outstanding matric results, with a focus in all streams subjects and
+            critical
             thinking skills.</p>
         </div>
 
@@ -105,40 +108,23 @@
       <div class="announcement-card">
         <h3>2024 Matric Results Celebration</h3>
         <span class="announcement-date">January 20, 2024</span>
-        <p>We're proud to announce an 89% pass rate for our 2023 matric class, with 45 distinctions across various
-          subjects. A celebration assembly will be held on Friday at 10am in the school hall.</p>
+        <p>We're proud to announce an 89% pass rate for our 2024 matric class, with distinctions obtained across various
+          subjects.</p>
       </div>
 
       <div class="announcement-card">
-        <h3>School Open Day</h3>
-        <span class="announcement-date">February 5, 2024</span>
-        <p>Prospective students and parents are invited to our annual Open Day on March 15th. Tour our facilities, meet
-          teachers, and learn about our academic programs and extracurricular offerings.</p>
+        <h3>Schools open</h3>
+        <span class="announcement-date">15 January, 2025</span>
+        <p>School opening for the 2025 Calendar year and welcoming our new students.</p>
       </div>
-      
+
       <div class="announcement-card">
-        <h3>Sports Day Postponement</h3>
-        <span class="announcement-date">February 12, 2024</span>
-        <p>Due to inclement weather forecasts, our annual Sports Day has been postponed to March 22nd. All other school
-          activities will continue as scheduled.</p>
+        <h3>Matric Dance</h3>
+        <span class="announcement-date">To be announced</span>
+        <p>Matric dance for the grade 12 coming soon</p>
       </div>
     </div>
   </section>
-
-   <!-- Social Media Section -->
-        <section id="social-media" class="social-media-section" aria-label="Social Media Section">
-          <h2>Connect With Us</h2>
-          <p class="heading">See Our Latest Activities</p>
-          <div class="social-media-grid">
-
-            <!-- Facebook Embed -->
-            <div class="social-media-item">
-              <div id="fb-root"></div>
-              <div class="fb-page" data-href="https://web.facebook.com/photo/?fbid=417614777173334&set=a.417614747173337&__tn__=%3C"
-                data-width="400" data-height="400" data-tabs="timeline" data-small-header="false"
-                data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-              </div>
-            </div>
 
   <!-- Quick Links Section -->
   <section class="quick-links">
@@ -157,6 +143,7 @@
           <ul>
             <li><a href="#">School Calendar</a></li>
             <li><a href="#">Fee Information</a></li>
+            <li><a href="#">Donate</a></li>
           </ul>
         </div>
         <div class="link-card">
@@ -179,13 +166,15 @@
         <div class="footer-column">
           <h3>Contact Us</h3>
           <address>
-            123 Education Street<br>
-            Johannesburg, 2000<br>
-            South Africa
+            1658 BUSHVELD ROAD<br>
+            WINTERVELDT<br>
+            0198<br>
+            Pretoria, Gauteng
           </address>
-          <p><i class="fas fa-phone"></i> +27 11 123 4567</p>
-          <p><i class="fas fa-envelope"></i> info@irlesolanghigh.edu.za</p>
+          <p><i class="fas fa-phone"></i> +27 65 558 3538</p>
+          <i class="fas fa-envelope"></i><a href="mailto:info@irlesolanghigh.edu.za"> info@irlesolanghigh.edu.za</a>
         </div>
+
         <div class="footer-column">
           <h3>School Hours</h3>
           <p>Monday - Friday: 7:30am - 3:00pm</p>
@@ -195,7 +184,7 @@
         <div class="footer-column">
           <h3>Follow Us</h3>
           <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="https://web.facebook.com/profile.php?id=100067744445272"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
@@ -203,24 +192,10 @@
           <p>Subscribe to our newsletter for updates</p>
         </div>
       </div>
-
-
-      <p>&copy; 2024 I.R Lesolang High School. All Rights Reserved. | <a href="#"
-          style="color: var(--secondary-color);">Privacy Policy</a> | <a href="#"
-          style="color: var(--secondary-color);">Terms of Use</a></p>
-
-
-      <script>
-      // Mobile menu toggle script
-    const navToggle = document.querySelector('.nav-toggle');
-    const nav = document.querySelector('.nav ul');
-
-    navToggle.addEventListener('click', () => {
-      nav.classList.toggle('nav-open');
-      navToggle.classList.toggle('open');
-    });
-      </script>
-
 </body>
+
+<footer class="copyright-footer">
+  <p>&copy; 2025 I.R. Lesolang Secondary School. All rights reserved.</p>
+</footer>
 
 </html>
