--- a/home.html
+++ b/home.html
@@ -17,8 +17,9 @@
 <body>
   <header class="main-header">
     <div class="header-container">
-      <img src="img/logo.jpg" alt=" Logo" class="logo-img">
-      <div class="header-divider"></div>
+      <img src="img/logo2.jpg" alt=" Logo" class="logo-img">
+	  <div class="header-divider"></div>
+	  <img src="img/logo.jpg" alt=" Logo" class="logo-img">
       <div class="branding">
         <div class="school-name">
           <span>I.R</span>
@@ -33,9 +34,9 @@
     <!-- Navigation -->
     <nav class="nav">
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#admissions">Donate</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="donate.html">Donate</a></li>
         <li><a href="#academics">Academics</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -95,11 +96,10 @@
           <h3>Sports & Activities</h3>
           <p>We offer a wide range of sport sand extracurricular activities to develop well-rounded individuals.</p>
         </div>
-
-
       </div>
     </div>
   </section>
+  
 
   <!-- Announcements Section -->
   <section class="announcements">
